--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,28 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
 /*--Colours--*/
 .bg-color-name-title {
-    background-color: #676767;
+    background-color: #6f42c1;;
+    color: #fff;
 }
+
+.ui-menu-color-home {
+    background-color: #e67e22;
+
+}
+
+.ui-menu-color-resume {
+    background-color: #dc3545;;
+}
+
+.ui-menu-color-contact {
+    background-color: #3498db;
+}
+
+.ui-menu-color-download {
+    background-color: #ffc107;
+}
+
+
 /*--Heading--*/
 header {
     margin: 0;
@@ -35,4 +55,48 @@ font-size: 28px;
 margin-top: 20px;
 margin-bottom: 90px;
 color: #fff;
+}
+
+.list-inline-item:not(:last-child){
+    margin:0;
+}
+
+.menucontainer {
+    font-size: 0;;
+}
+
+#nav li {
+font-size: 14px;
+padding: 0;
+}
+
+.menuitem {
+    height:120px;
+    text-align: center;
+    padding: 0;
+}
+
+.menuitem a {
+    width: 100%;
+    text-decoration: none;
+    color: #fff;
+    height: 120px;
+}
+
+.menuitem a i {
+    padding-top: 22px;
+    display: block;
+    color: #fff;
+    font-size: 26px;
+}
+
+.menuitem span {
+    display: block;
+    width: 100%;
+    padding-top: 5px;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 300;
+    letter-spacing: 2px;
 }
