--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,21 @@
 .ui-menu-color-download {
     background-color: #ffc107;
 }
+/*--Specials--*/
 
+h1,h2,h3,h4 {
+    margin:0;
+}
+
+.uppercase {
+    text-transform: uppercase;
+}
+
+.general-sub {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    color: #fff;
+}
 
 /*--Heading--*/
 header {
@@ -111,4 +125,12 @@ padding: 0;
 
 .hvr-sweep-to-bottom:before {
 background-color: rgba(0,0,0,0.2);
+}
+
+/*--Footer-*/
+
+footer {
+    background-color: #6f42c1;
+    color:#fff;
+    min-height:120px;
 }
