--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,32 +25,13 @@
 .ui-menu-color-download {
     background-color: #ffc107;
 }
-/*--Specials--*/
-
-h1,h2,h3,h4 {
-    margin:0;
-}
-
-.uppercase {
-    text-transform: uppercase;
-}
-
-.general-sub {
-    font-family: "Exo", sans-serif;
-    font-weight: 300;
-    color: #fff;
-}
-.inline-block {
-    display: inline-block;
-}
-
 .row-table {
     display: table;
 }
 
 .section-column {
     display: table-cell;
-    padding:0 30px 30px;
+    padding: 0 30px 30px;
     float: none;
 }
 
@@ -61,15 +42,58 @@ h1,h2,h3,h4 {
     margin-bottom: 40px;
 }
 
-/*--Heading--*/
+/* ----------------------------------------Special paddings/margins/text */
+
+h1,
+h2,
+h3,
+h4 {
+    margin: 0;
+}
+
+.uppercase {
+    text-transform: uppercase;
+}
+
+.general-sub {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    color: #fafafa;
+}
+
+.inline-block {
+    display: inline-block;
+}
+
+.row-table {
+    display: table;
+}
+
+.section-column {
+    display: table-cell;
+    padding: 0 30px 30px;
+    float: none;
+}
+
+.section-heading {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 40px;
+}
+
+/*--------------------------------------------Heading*/
+
 header {
     margin: 0;
 }
-.heading {
-    margin-left: 50px;
-}
+
 .row {
     margin-left: 0;
+}
+
+.heading {
+    margin-left: 50px;
 }
 
 .logo {
@@ -82,40 +106,43 @@ header {
     -moz-transition: all .5s ease-in-out;
     -webkit-transition: all .5s ease-in-out;
 }
+
 .name {
-font-family: "Exo", sans-serif;
-font-weight: 100;
-font-size: 46px;
-margin-top: 50px;
-color: #fff;
-}
-.title {
-font-family: "Roboto", sans-serif;
-font-weight: 200;
-font-size: 28px;
-margin-top: 20px;
-margin-bottom: 90px;
-color: #fff;
+    font-family: "Exo", sans-serif;
+    font-weight: 100;
+    font-size: 46px;
+    margin-top: 50px;
+    color: #fff;
 }
 
-.list-inline-item:not(:last-child){
-    margin:0;
+.title {
+    font-family: "Roboto", sans-serif;
+    font-weight: 200;
+    font-size: 28px;
+    margin-top: 20px;
+    margin-bottom: 90px;
+    color: #fff;
+}
+
+.list-inline-item:not(:last-child) {
+    margin: 0;
 }
 
 .menucontainer {
-    font-size: 0;;
-}
-#nav {
-margin: 0;
+    font-size: 0;
 }
 
 #nav li {
-font-size: 14px;
-padding: 0;
+    font-size: 14px;
+    padding: 0;
+}
+
+#nav {
+    margin: 0;
 }
 
 .menuitem {
-    height:120px;
+    height: 120px;
     text-align: center;
     padding: 0;
 }
@@ -130,7 +157,7 @@ padding: 0;
 .menuitem a i {
     padding-top: 22px;
     display: block;
-    color: #fff;
+    color: #fafafa;
     font-size: 26px;
 }
 
@@ -145,26 +172,27 @@ padding: 0;
     letter-spacing: 2px;
 }
 
-/*--Hover.CSS--*/
+/*--------------------------------------------Hover.css*/
 
 .hvr-sweep-to-bottom:before {
-background-color: rgba(0,0,0,0.2);
+    background: rgba(0, 0, 0, 0.2);
+    height: 120px;
 }
 
-/*--Footer-*/
+/* ----------------------------------------Footer */
 
 footer {
     background-color: #6f42c1;
-    color:#fff;
-    min-height:120px;
+    color: #fafafa;
+    min-height: 120px;
+    margin: 0;
 }
 
 .cv-pdf i {
     font-size: 18px;
-    color: #fff;
+    color: #fafafa;
     text-align: center;
     padding-left: 5px;
-    text-transform: none;
     transition: all 0.35s ease-in-out;
     -moz-transition: all 0.35s ease-in-out;
     -webkit-transition: all 0.35s ease-in-out;
@@ -172,11 +200,11 @@ footer {
 }
 
 .cv-pdf i:hover {
-    color:#e67e22
+    color: #3498db;
 }
 
 .social-links {
-padding-bottom: 15px;
+    padding-bottom: 15px;
 }
 
 .social-links li a i {
@@ -187,17 +215,29 @@ padding-bottom: 15px;
     font-size: 13px;
     line-height: 7px;
     text-align: center;
-    color: #fff;
-    background: #3498db;
+    color: black;
+    background: #fff;
     transition: all 0.35s ease-in-out;
     -moz-transition: all 0.35s ease-in-out;
     -webkit-transition: all 0.35s ease-in-out;
     -o-transition: all 0.35s ease-in-out;
 }
+
 .social-links li a i:hover {
-    background: #e67e22;
+    background: #3498db;
 }
 
 #footer-details {
     padding: 20px;
+}
+
+/* ----------------------------------------Three Reasons */
+
+.three-reasons-icon {
+    font-size: 26px;
+    color: #6f42c1;
+}
+
+.three-reasons-heading {
+    margin-bottom: 15px;
 }
