--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,6 +52,10 @@
     background-color: #dc3545;
 }
 
+.bg-color-contact {
+    background-color: #fff;
+}
+
 /* --Special paddings/margins/text-- */
 
 h1,
@@ -362,3 +366,35 @@ margin: 0;
 .history-items {
     margin-bottom: 30px;
 }
+
+/* --Contact Form --*/
+
+.contact-heading {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 20px;
+}
+
+.center-form {
+    padding-top: 10px;
+    margin: 0 auto;
+    max-width: 70%;
+}
+
+button[type="submit"] {
+    margin-top: 15px;
+    margin-bottom: 20px;
+    color: #fff;
+    background-color:#3498db ;
+}
+
+/*--Media queries--*/
+
+@media(min-width: 992px) {
+.center-form {
+    padding-top: 30px;
+    min-height: 240px;
+    margin: 0 auto;
+    max-width: 50%;
+}}
